@@ -100,7 +100,7 @@ class Conversation(Traversable, Persistent, Explicit):
 
         # Fetch discussion registry
         registry = queryUtility(IRegistry)
-        settings = registry.forInterface(IDiscussionSettings)
+        settings = registry.forInterface(IDiscussionSettings, check=False)
 
         # Check if discussion is allowed globally
         if not settings.globally_enabled:
