@@ -4,6 +4,10 @@ Changelog
 1.0b11 (unreleased)
 -------------------
 
+- Disable the plone.app.registry check on schema elements, so no error is
+  raised on upgrades. This fixes https://dev.plone.org/plone/ticket/11195.
+  [timo]
+
 - Remove the too generic id attribute of the comment form.
   [timo]
 
